# idk

./: .gitattributes  .gitignore  Cargo.toml  README.md
src/: blue.rs  red.rs
